apps/xormon/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xormon
  annotations:
    volsync.backube/privileged-movers: "true"
