apps/xormon/deployment-timescaledb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: timescaledb
  name: timescaledb
spec:
  replicas: 0
  selector:
    matchLabels:
      app: timescaledb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: timescaledb
    spec:
      containers:
        - image: timescale/timescaledb:latest-pg16
          name: timescaledb
          resources: {}
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: timescaledb
      restartPolicy: Always
      volumes:
        - name: timescaledb
          persistentVolumeClaim:
            claimName: timescaledb
