apps/xormon/deployment-xormon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xormon
  name: xormon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xormon
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: xormon
    spec:
      containers:
        - image: xorux/xormon-ng:2.3.21
          name: xormon
          resources:
            requests:
              cpu: 200m
              memory: 2Gi
            limits: {}
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8162
              protocol: TCP
          volumeMounts:
            - mountPath: /app/server-nest/files
              name: xormon
            - mountPath: /app/server-nest/ssl/xormon.crt
              name: xormon-ssl
              subPath: tls.crt
            - mountPath: /app/server-nest/ssl/xormon.key
              name: xormon-ssl
              subPath: tls.key
      restartPolicy: Always
      volumes:
        - name: xormon
          persistentVolumeClaim:
            claimName: xormon
        - name: xormon-ssl
          secret:
            secretName: almothana-sa-tls
