apps/xormon/service-timescaledb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: timescaledb
  name: timescaledb
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: timescaledb
