apps/xormon/service-xormon-agent-lan.yaml
apiVersion: v1
kind: Service
metadata:
  name: xormon-agent-lan
  annotations:
    external-dns.kubernetes.io/hostname: xormon-agent.almothana.xyz
spec:
  type: LoadBalancer
  selector:
    app: xormon
  ports:
    - name: agent-tcp
      port: 8162
      targetPort: 8162
      protocol: TCP
