apps/xormon/ingress-xormon.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xormon
  annotations:
    ingress.cilium.io/tls-passthrough: "enabled"
spec:
  ingressClassName: cilium
  rules:
  - host: xormon.almothana.sa
    http:
      paths:
      - backend:
          service:
            name: xormon
            port:
              number: 8443
        path: /
        pathType: Prefix
